--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Platoon Tactics
+name: "Platoon Tactics"
 
 # Short bio or description (displayed in the header)
 description: Small tactical combat game beeing developed.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/48927601?s=460&v=4
 
 #
 # Flags below are optional
